# CAESAR

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  cla-signatures.json  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: adr_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge-on-approval.yml  cla.yml  dependabot-auto-merge.yml  dependency-review.yml  docs.yml  labeler.yml  lint.yml  pr-lint.yml  release-please.yml  test.yml  typecheck.yml
caesar/: __init__.py  cli.py  cli_init.py  config.py  log.py  metrics.py  tracing.py
caesar/bus/: __init__.py  client.py
caesar/db/: __init__.py  audit.py  audit_clamp.py  backup.py  engine.py  migrate.py  schema.py  settings_store.py
caesar/db/migrations/: env.py
caesar/db/migrations/versions/: 0001_baseline.py  0002_semantic_chunks.py  0003_app_settings.py  0004_personal_facts.py
caesar/ha/: __init__.py  client.py  models.py  subscription.py
caesar/legion/: __init__.py  bootstrap.py  calculator.py  calendar_read.py  memory_recall.py  notify.py  protocol.py  registry.py  semantic_recall.py  web_search.py  worker.py
caesar/llm/: __init__.py  anthropic.py  embeddings.py  gateway.py  ollama.py  openai.py  router.py
caesar/memory/: __init__.py  extract.py  facts.py  retention.py  semantic.py
caesar/policy/: __init__.py  allowlist.py  engine.py  yaml_loader.py
caesar/praetor/: __init__.py  app.py  audit_bus.py  dispatch.py  graph.py  middleware.py  safety.py
caesar/praetor/dashboard/: __init__.py  auth.py  rate_limit.py  routes.py  security_headers.py  views.py
caesar/praetor/dashboard/static/: dashboard.css
caesar/praetor/dashboard/templates/: _audit_rows.html  agents.html  base.html  home.html  intents.html  login.html  settings.html
caesar/praetor/routes/: __init__.py  chat.py  devices.py  health.py  metrics.py  webhook.py
caesar/proactive/: __init__.py  ha_driver.py  runner.py  scheduler.py  triggers.py  webhook_dispatcher.py  yaml_loader.py
docs/: ADD-YOUR-OWN-TOOL.md  ARCHITECTURE.md  CONFIGURATION.md  GLOSSARY.md  OPERATIONS.md  PICKING-A-MODEL.md  PROACTIVE-CAESAR.md  QUICKSTART.md  ROADMAP.md  RUN-A-WORKER.md  SECURITY-MODEL.md  SECURITY-REVIEW.md  index.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-license-polyform-nc.md  0003-require-cla.md  0004-conventional-commits-and-release-please.md  0005-python-3-11-runtime.md  0006-praetor-runtime.md  0007-home-assistant-bridge.md  0008-voice-wyoming.md  0009-message-bus-nats.md  0010-memory-hybrid.md  0011-llm-gateway.md  0012-audit-log.md  0013-policy-engine.md  0014-trunk-based-development.md  0015-python-toolchain.md  0016-package-layout.md  0017-configuration.md  0018-structured-logging.md  0019-sqlite-persistence.md  0020-memory-retention-ttl.md  0021-dashboard-htmx.md  0022-backup-restore.md  0023-opentelemetry-tracing.md  0024-docs-site-mkdocs.md  0025-security-review.md  0026-multi-provider-llm-gateway.md  0027-nats-auth-multihost-legion.md  0028-tools-beyond-ha.md  0029-docker-distribution-and-init.md  0030-proactivity-schedules-and-ntfy.md  0031-ha-event-triggers.md  0032-webhook-triggers.md  0033-personal-facts.md  README.md
examples/: legion-multihost-nats.conf  policy.yaml
tests/: conftest.py  fakebus.py  fakeha.py  test_audit_bus.py  test_audit_clamp.py  test_bus.py  test_bus_auth.py  test_calculator.py  test_calendar_read.py  test_cli.py  test_cli_init.py  test_config.py  test_dashboard.py  test_dashboard_rate_limit.py  test_dashboard_security_headers.py  test_dashboard_settings_override.py  test_dashboard_signing_key.py  test_dashboard_views.py  test_db_audit.py  test_db_backup.py  test_db_engine.py  test_db_migrate.py  test_dispatch.py  test_embeddings.py  test_gateway_tool_types.py  test_ha_client_rest.py  test_ha_client_ws.py  test_ha_models.py  test_ha_subscription.py  test_legion_bootstrap.py  test_legion_multihost.py  test_legion_protocol.py  test_legion_registry.py  test_legion_worker.py  test_llm_anthropic.py  test_llm_gateway_types.py  test_llm_ollama.py  test_llm_openai.py  test_llm_router.py  test_log.py  (+34 more)
