[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "caesar"
version = "0.2.0"
description = "Self-hosted homelab AI assistant — Praetor brain + Legion of worker agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "CAESAR contributors" }]
keywords = [
    "home-assistant",
    "homelab",
    "ai-assistant",
    "langgraph",
    "voice-assistant",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "typer>=0.13.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "ollama>=0.4.0",
    "langgraph>=0.2.50",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "nats-py>=2.7.0",
    "voyageai>=0.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.27.2",
    "ruff>=0.15.13",
    "pre-commit>=4.6.0",
    "types-pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]
otel = [
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
]

[project.scripts]
caesar = "caesar.cli:app"

[project.urls]
Homepage = "https://github.com/sinidious/caesar"
Repository = "https://github.com/sinidious/caesar"
Issues = "https://github.com/sinidious/caesar/issues"
Changelog = "https://github.com/sinidious/caesar/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["caesar"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs/**", "caesar/db/migrations/versions/**"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["caesar", "tests"]
exclude = ["caesar/db/migrations/"]

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["langgraph.*", "voyageai.*"]
ignore_missing_imports = true

# OpenTelemetry is an opt-in extra (ADR-0023). CI doesn't install it,
# so mypy can't see its stubs; the tracing module is fully type-safe
# without them by virtue of the dynamic-import shape.
[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
    "opentelemetry.exporter.*",
    "opentelemetry.instrumentation.*",
    "opentelemetry.sdk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error",
    # capsys closes its captured stdout when the test ends; any async
    # log emission that fires during gc (e.g. uvloop/asyncio cleanup
    # of pending tasks holding a logger.info coroutine) writes to it
    # and raises an unraisable I/O error. The structlog handler's
    # binding-to-sys.stdout-at-config-time is the root cause; silencing
    # the warning is safer than redirecting logging in every test.
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # Same root cause, different surface: aiosqlite worker threads
    # sometimes resurface during cleanup with "Event loop is closed".
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["caesar"]
omit = ["caesar/db/migrations/*"]
# SQLAlchemy's async stack dispatches sync work through greenlets;
# without this, the connect-listener pragma execution isn't traced
# on Linux CI even though the tests prove it runs.
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# 98 (not 100) absorbs (a) a Python 3.11 coverage.py quirk on
# conditional cleanup lines inside the lifespan finally, and (b) the
# couple of SSE-generator lines that httpx ASGITransport can't reach
# (it buffers full responses). The same code reports near-100% on
# 3.12; behaviour is verified by tests. Tighten if we drop 3.11.
fail_under = 98
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    # Protocol method bodies are unreachable by definition.
    '^\s*\.\.\.\s*$',
    '^\s*\.\.\.\s+#',
]
